fix TileSet overflow

--- a/React/src/components/ProductTileSet/ProductTileSet.css
+++ b/React/src/components/ProductTileSet/ProductTileSet.css
@@ -1,5 +1,6 @@
 
 .productTiles {
+  overflow: scroll;
   display: flex;
   flex-direction: row;
   background-color: white;
